--- a/chefs/templates/check.html
+++ b/chefs/templates/check.html
@@ -29,47 +29,56 @@
                                 <h5>e: rajneeshgandhi62@gmail.com</h5>
                                 <h5> m:	+91 - 8197129295</h5>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4" >
             <!--pannel start here-->
-                <div class="panel panel-default">
+                <div class="panel panel-default" style="width: 343px">
                     <div class="panel-heading">
                         <h3 class="panel-title text-left">Feel free to contact us.</h3>
                     </div>
                 <!--pannel body start here-->
+                <form method="post" action="/email/send/">{% csrf_token %}
                     <div class="panel-body">
 
-                            <div class="form-group">
-                                <input class="form-control"  id="id_username" maxlength="30" name="Name"
-                                       type="text"  placeholder="Name" required autofocus=""/>
-                            </div>
-
-                            <div class="form-group">
-                                <input class="form-control" id="id_email" name="email" type="email"
-                                       placeholder="Email Id" required autofocus=""/>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control"  id="comment" maxlength="30" name="Comment"
-                                       type="text"  placeholder="Comment" required autofocus=""/>
-                                </div>
-                            <div class="row">
+                        <div class="row"style="padding-top: 10px">
                                 <div class="col-xs-6 col-sm-6 col-md-6">
                                     <div class="form-group">
-                                        <input class="form-control" id="id_password1" name="Mobile No."
-                                               type="text" placeholder="Mobile No." required autofocus=""/>
+
+                                         <input class="form-control"  maxlength="30" name= "firstname"
+                                       type="text"  placeholder="First Name" required autofocus=""/>
                                     </div>
+                                    <input name="botcheck" class="inputtext" type="text" maxlength="5"
+                                                      size="5" value="yes" hidden="hidden" />
                                 </div>
                                 <div class="col-xs-6 col-sm-6 col-md-6">
                                     <div class="form-group">
-                                        <input class="form-control" id="id_password2" name="Service Interested In"
-                                               type="text" placeholder="Service interest" required autofocus=""/>
+
+                                        <input class="form-control"  name= "lastname" type="text"
+                                       placeholder="Last Name" required autofocus=""/>
                                     </div>
                                 </div>
 
+                        </div>
+                        <div class="form-group">
+                                <input class="form-control"   maxlength="30" name="email"
+                                       type="email"  placeholder="Email Id" required autofocus=""/>
+                                </div>
+                            <div class="form-group">
+                                <input class="form-control"  name="subject"
+                                               type="text" placeholder="Subject" required autofocus=""/>
                             </div>
 
-                            <button type="submit" class="btn btn-danger btn-block">Submit</button>
+                            <div class="form-group">
+                                                            <div class="span6">
+
+                                    <textarea class="field span12" id="textarea" rows="4"
+                                              placeholder="Your Message Here"style="width: 310px"
+                                              name="message"></textarea>
+                                </div>
+                            </div>
+                                    <input class="btn btn-danger btn-block" type="submit" name="submitform" value="Send Message" />
+
                     </div>
-
+                </form>
                     </div>
                 <!--pannel body end here-->
                             </div>
@@ -77,7 +86,9 @@
 
                         </div>
                     </div>
-</div>
+
+
+
 
 
 
